@startuml
'https://plantuml.com/class-diagram

title Diagramme avec gestion des niveaux

interface Jeu {
    +update(double secondes, Clavier clavier)
    +init()
    +etreFini()
    }

interface DessinJeu {
    +dessinerJeu (Jeu jeu, Canvas canvas)
    }



class LabyDessin{
    +TAILLE_RECTANGLE : int
    +dessinerJeu(Jeu jeu, Canvas canvas)
}

class LabyJeu{
    -laby : Labyrinthe
    +LabyJeu(String nom)
    +update(double secondes, Clavier clavier)
    +init
    +etreFini : boolean
    +getLabi : Labyrinthe
    }

class Position{
    -x : int
    -y : int
    +Position(int dx, int dy)
    +etrePresent(Position p) : boolean
    +getX() : int
    +getY() : int
    +setX()
    +setY()
    }

abstract Case {
    + TYPE : char
    + TRAVERSABLE : boolean
    +Case(int x, int y, char type)
    +faireEffet(Perso p)
    +getType() : char
    +isTraversable()

    }


class Perso {
    -pv : int
    +Perso(int x, int y, int pv)
    +subirDegats(int deg)
    +etreMort() : boolean
    +getPv() : int
}

'class Monstre {
'    -PointsAttaque : int
'    +Monstre(int x, int y,char type, int ptsAtt)
'    +faireEffet(Perso p)
'    +getPointsAttaque() : int
'}

class Labyrinthe{
    +MUR : char
    +PJ : char
    +MON = char
    +VIDE : char
    +HAUT = String
    +BAS = String
    +GAUCHE : String
    +DROITE : String
    +getSuivant(int x, int y, String action) : int
    +Labyrinthe(String nom)
    +deplacerPerso(String action)
    +etreFini() : boolean
     +getLengthY() : int
     +getLength() : int
     +getMur(int x, int y) : boolean
     +getPj() : Perso
     +getMonstres(int pos) : Monstre
     +getCase(int x, int y) : Case


    }

class CaseVide {
    +CaseVide(int x, int y, char p)
    +getTtype() : char
    +faireEffet(Perso p)
}

class CaseMur {
    +CaseMur(int x, int y, char t)
    +getTtype() : char
    +faireEffet(Perso p)
}

class CaseDeclencheur {
    +CaseDeclencheur(int x, int y, char t)
    +faireEffet(Perso p)
    +getTtype() : char

}

class CasePiegee {
    -degats : int
    +CasePiegee(int x, int y,char type,int deg)
    +faireEffet(Perso p)
    +getDegats() : int
    +getTtype() : char

}

class Monstre {
    -PointsAttaque : int
    +CasePiegee(int x, int y,char type,int deg)
    +faireEffet(Perso p)
    +getDegats() : int
    +getTtype() : char

}


DessinJeu <|.. LabyDessin
Jeu <|.. LabyJeu
Position <|-- Perso
Position <|-- Case
Case <|-- Monstre
Labyrinthe "1" --> "1" Perso : +pj
Labyrinthe "1" --> "*" Case : +cases
LabyDessin ..> LabyJeu : uses
LabyJeu "1" --> "1" Labyrinthe : laby
Case <|-- CaseVide
Case <|-- CaseMur
Case <|-- CasePiegee
Case <|-- CaseDeclencheur


@enduml